--- a/PiedraPapelTijeras/Piedra_Papel_Tijeras_00/Piedra_Papel_Tijeras_00/Registro.xaml
+++ b/PiedraPapelTijeras/Piedra_Papel_Tijeras_00/Piedra_Papel_Tijeras_00/Registro.xaml
@@ -9,27 +9,29 @@
       Title="Registro">
 
     <Grid Background="#FF2E2E2E">
-        <Label Content="Piedra Papel Tijera" HorizontalAlignment="Left" Margin="326,10,0,0" VerticalAlignment="Top" Height="46" Width="178" FontFamily="David CLM BoldItalic" FontWeight="Bold" FontSize="20" FontStyle="Normal" Foreground="#FFC5B9B9"/>
-        <Image HorizontalAlignment="Left" Height="61" Margin="311,56,0,0" VerticalAlignment="Top" Width="218" Source="/download-removebg-preview.png">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="224*"/>
+        </Grid.RowDefinitions>
+        <Label Content="Piedra Papel Tijera" HorizontalAlignment="Left" Margin="326,8,0,0" VerticalAlignment="Top" Height="46" Width="178" FontFamily="David CLM BoldItalic" FontWeight="Bold" FontSize="20" FontStyle="Normal" Foreground="#FFC5B9B9" Grid.Row="1"/>
+        <Image HorizontalAlignment="Left" Height="61" Margin="311,54,0,0" VerticalAlignment="Top" Width="218" Source="/download-removebg-preview.png" Grid.Row="1">
             <Image.OpacityMask>
                 <ImageBrush ImageSource="/download-removebg-preview.png"/>
             </Image.OpacityMask>
         </Image>
-        <Label Content="Registration :" HorizontalAlignment="Left" Margin="347,156,0,0" VerticalAlignment="Top" Height="43" Width="121" Foreground="#FFDCD1D1" FontSize="14" FontWeight="Bold"/>
-        <TextBlock x:Name="UserNameBlock" HorizontalAlignment="Left" Margin="131,203,0,0" TextWrapping="Wrap" Text="User" VerticalAlignment="Top" Height="21" Width="46" Foreground="#FFFBFAFB" FontWeight="Bold" FontSize="14" FontFamily="KacstBook"  />
-        <TextBlock x:Name="UserPassBlock" HorizontalAlignment="Left" Margin="131,240,0,0" TextWrapping="Wrap" Text="Pass" VerticalAlignment="Top" Height="23" Width="46" Foreground="#FFF5F2F5" FontFamily="KacstBook" FontSize="14" FontWeight="Bold"/>
-        <Button x:Name="LoginBtn" Content="Send" HorizontalAlignment="Left" Margin="326,323,0,0" VerticalAlignment="Top" Height="22" Width="143" Background="#FF4A4646" Cursor="Arrow" Opacity="0.5" FontWeight="Bold" Click="LoginBtn_Click"/>
-        <TextBlock x:Name="FName" HorizontalAlignment="Left" Margin="398,204,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Height="21" Width="87" Foreground="#FFFBFAFB" FontWeight="Bold" FontSize="14" FontFamily="KacstBook"  />
-        <TextBlock x:Name="LName" HorizontalAlignment="Left" Margin="398,241,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Height="21" Width="71" Foreground="#FFFBFAFB" FontWeight="Bold" FontSize="14" FontFamily="KacstBook"  />
-        <TextBlock x:Name="Mail" HorizontalAlignment="Left" Margin="131,274,0,0" TextWrapping="Wrap" Text="Email" VerticalAlignment="Top" Height="21" Width="46" Foreground="#FFFBFAFB" FontWeight="Bold" FontSize="14" FontFamily="KacstBook"  />
-        <TextBlock x:Name="alias" HorizontalAlignment="Left" Margin="398,274,0,0" TextWrapping="Wrap" Text="Alias" VerticalAlignment="Top" Height="21" Width="44" Foreground="#FFFBFAFB" FontWeight="Bold" FontSize="14" FontFamily="KacstBook" RenderTransformOrigin="0.636,-0.314"  />
-        <Button x:Name="BckButtom" Content="Back" HorizontalAlignment="Center" Margin="0,412,0,0" VerticalAlignment="Top" Height="19" Width="42" Background="#FF4A4646" Cursor="Arrow" Opacity="0.5" FontWeight="Bold" Click="BckButtom_Click" RenderTransformOrigin="0.626,-0.476" />
-        <TextBox x:Name="emailbox" HorizontalAlignment="Left" Height="22" Margin="182,274,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" BorderBrush="#FF757474" Foreground="#FFA29E9E"/>
-        <TextBox x:Name="fnamebox" HorizontalAlignment="Left" Height="22" Margin="485,204,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" BorderBrush="#FF757474" Foreground="#FFA29E9E"/>
-        <TextBox x:Name="lnamebox" HorizontalAlignment="Left" Height="22" Margin="485,241,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" BorderBrush="#FF757474" Foreground="#FFA29E9E"/>
-        <TextBox x:Name="aliasbox" HorizontalAlignment="Left" Height="22" Margin="485,274,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" BorderBrush="#FF757474" Foreground="#FFA29E9E"/>
-        <TextBox x:Name="userbox" HorizontalAlignment="Left" Height="22" Margin="182,204,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" Foreground="#FFA29E9E" BorderBrush="#FF757474"/>
-        <TextBox x:Name="passbox" HorizontalAlignment="Left" Height="22" Margin="182,240,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" BorderBrush="#FF757474" Foreground="#FFA29E9E"/>
+        <Label Content="Registration :" HorizontalAlignment="Left" Margin="347,154,0,0" VerticalAlignment="Top" Height="43" Width="121" Foreground="#FFDCD1D1" FontSize="14" FontWeight="Bold" Grid.Row="1"/>
+        <TextBlock x:Name="UserNameBlock" HorizontalAlignment="Left" Margin="131,201,0,0" TextWrapping="Wrap" Text="User" VerticalAlignment="Top" Height="21" Width="46" Foreground="#FFFBFAFB" FontWeight="Bold" FontSize="14" FontFamily="KacstBook" Grid.Row="1"  />
+        <TextBlock x:Name="UserPassBlock" HorizontalAlignment="Left" Margin="131,238,0,0" TextWrapping="Wrap" Text="Pass" VerticalAlignment="Top" Height="23" Width="46" Foreground="#FFF5F2F5" FontFamily="KacstBook" FontSize="14" FontWeight="Bold" Grid.Row="1"/>
+        <Button x:Name="RegisterBtn" Content="Send" HorizontalAlignment="Left" Margin="326,321,0,0" VerticalAlignment="Top" Height="22" Width="143" Background="#FF4A4646" Cursor="Arrow" Opacity="0.5" FontWeight="Bold"  Grid.Row="1" Click="RegisterBtn_Click"/>
+        <TextBlock x:Name="FName" HorizontalAlignment="Left" Margin="398,202,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Height="21" Width="87" Foreground="#FFFBFAFB" FontWeight="Bold" FontSize="14" FontFamily="KacstBook" Grid.Row="1"  />
+        <TextBlock x:Name="LName" HorizontalAlignment="Left" Margin="398,239,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Height="21" Width="71" Foreground="#FFFBFAFB" FontWeight="Bold" FontSize="14" FontFamily="KacstBook" Grid.Row="1"  />
+        <TextBlock x:Name="Mail" HorizontalAlignment="Left" Margin="131,272,0,0" TextWrapping="Wrap" Text="Email" VerticalAlignment="Top" Height="21" Width="46" Foreground="#FFFBFAFB" FontWeight="Bold" FontSize="14" FontFamily="KacstBook" Grid.Row="1"  />
+        <Button x:Name="BckButtom" Content="Back" HorizontalAlignment="Left" Margin="10,15,0,0" VerticalAlignment="Top" Height="19" Width="42" Background="#FF4A4646" Cursor="Arrow" Opacity="0.5" FontWeight="Bold" Click="BckButtom_Click" RenderTransformOrigin="0.626,-0.476" Grid.Row="1" />
+        <TextBox x:Name="emailbox" HorizontalAlignment="Left" Height="22" Margin="182,272,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" BorderBrush="#FF757474" Foreground="#FFA29E9E" Grid.Row="1"/>
+        <TextBox x:Name="fnamebox" HorizontalAlignment="Left" Height="22" Margin="485,202,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" BorderBrush="#FF757474" Foreground="#FFA29E9E" Grid.Row="1"/>
+        <TextBox x:Name="lnamebox" HorizontalAlignment="Left" Height="22" Margin="485,239,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" BorderBrush="#FF757474" Foreground="#FFA29E9E" Grid.Row="1"/>
+        <TextBox x:Name="userbox" HorizontalAlignment="Left" Height="22" Margin="182,202,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" Foreground="#FFA29E9E" BorderBrush="#FF757474" Grid.Row="1"/>
+        <TextBox x:Name="passbox" HorizontalAlignment="Left" Height="22" Margin="182,238,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="182" Background="#FF2E2E2E" BorderBrush="#FF757474" Foreground="#FFA29E9E" Grid.Row="1"/>
 
     </Grid>
 </Page>
