--- a/PiedraPapelTijeras/Piedra_Papel_Tijeras_00/Piedra_Papel_Tijeras_00/Login.xaml
+++ b/PiedraPapelTijeras/Piedra_Papel_Tijeras_00/Piedra_Papel_Tijeras_00/Login.xaml
@@ -18,9 +18,10 @@
         <Label Content="Login :" HorizontalAlignment="Left" Margin="326,156,0,0" VerticalAlignment="Top" Height="43" Width="121" Foreground="#FFDCD1D1" FontSize="14" FontWeight="Bold"/>
         <TextBlock x:Name="UserNameBlock" HorizontalAlignment="Left" Margin="256,199,0,0" TextWrapping="Wrap" Text="User" VerticalAlignment="Top" Height="21" Width="53" Foreground="#FFFBFAFB" FontWeight="Bold" FontSize="14" FontFamily="KacstBook"  />
         <TextBlock x:Name="UserPassBlock" HorizontalAlignment="Left" Margin="256,239,0,0" TextWrapping="Wrap" Text="Pass" VerticalAlignment="Top" Height="23" Width="53" Foreground="#FFF5F2F5" FontFamily="KacstBook" FontSize="14" FontWeight="Bold"/>
-        <Button x:Name="LoginBtn" Content="Send" HorizontalAlignment="Center" Margin="0,287,0,0" VerticalAlignment="Top" Height="22" Width="143" Background="#FF4A4646" Cursor="Arrow" Opacity="0.5" FontWeight="Bold" Click="LoginBtn_Click"/>
+        <Button x:Name="LoginBtn" Content="Send" HorizontalAlignment="Left" Margin="326,292,0,0" VerticalAlignment="Top" Height="22" Width="143" Background="#FF4A4646" Cursor="Arrow" Opacity="0.5" FontWeight="Bold" Click="LoginBtn_Click"/>
         <Button x:Name="RegisBtn" Content="Register" HorizontalAlignment="Left" Margin="326,337,0,0" VerticalAlignment="Top" Height="22" Width="143" Background="#FF4A4646" Cursor="Arrow" Opacity="0.5" FontWeight="Bold" Click="RegisBtn_Click"/>
         <TextBox x:Name="userboxlog" HorizontalAlignment="Left" Height="26" Margin="315,195,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="154" Background="#FF2E2E2E" Foreground="#FFA29E9E" BorderBrush="#FF757474"/>
         <TextBox x:Name="passboxlog" HorizontalAlignment="Left" Height="23" Margin="315,239,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="157" Background="#FF2E2E2E" Foreground="#FFA29E9E" BorderBrush="#FF757474"/>
+        <Button x:Name="DeleteBtn" Content="Delete user" HorizontalAlignment="Left" Margin="326,383,0,0" VerticalAlignment="Top" Height="22" Width="143" Background="#FF4A4646" Cursor="Arrow" Opacity="0.5" FontWeight="Bold" Click="DeleteBtn_Click" />
     </Grid>
 </Page>
